# qwen_vl_kunpeng

./: .gitignore  README.md  download.py  pyproject.toml  requirement.txt  test.py  test_model_loading.py  test_pipeline.py  test_transformers_simple.py  test_vllm.py
