[project]
name = "qwen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.12.0",
    "scipy==1.17.0",
    "pillow==12.1.0",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "torchaudio==2.9.1",
    "transformers==4.57.6",
    "flashinfer-python==0.5.3",
    "vllm @ file:///root/data/vllm/dist/vllm-0.14.0+cu126-cp312-cp312-linux_aarch64.whl",
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "ray==2.53.0",
    "huggingface-hub==0.36.0",
    "tokenizers==0.22.2",
    "safetensors==0.7.0",
    "sentencepiece==0.2.1",
    "tiktoken==0.12.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "numpy==2.2.6",
    "einops==0.8.2",
    "triton==3.5.1",
    "xgrammar==0.1.29",
    "flash-attn",
    "qwen-vl-utils>=0.0.14",
    "nvidia-cusparselt-cu12>=0.7.1",
]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

# [tool.uv.extra-build-variables]
# flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

